Fixed bug at Subscriptions where long string would make the input shrink
When given a string that was too long, the input checkbox on the end would shrink. This has been fixed by giving it a min-width. On the mobile view the last char would get chopped of, for this reason also the char limit has been decreased by one.

closes #930

--- a/src/components/Watcher.module.css
+++ b/src/components/Watcher.module.css
@@ -31,6 +31,7 @@
 .watchGroup input[type="checkbox"]:checked {
   border: 1px solid white;
   background: white;
+  min-width: 20px;
 }
 
 .svgWrapper svg {
